[package]
name = "lalrpop_edn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
itoa = "1.0"
lalrpop-util = { version = "0.19", features = ["lexer"] }
num-bigint = "0.4"
ordered-float = "2.10"
regex = "1"
rust_decimal = "1.23"
ryu = "1.0"

[profile.dev.package.lalrpop]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true